# jira-python

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/jira_tools/: __init__.py  changelog.py  cli.py  client.py  config.py  exceptions.py  issues.py
tests/: __init__.py  test_changelog.py  test_client.py  test_config.py  test_issues.py
